KDE_DOCS = klatexformula
KDE_LANG = en
kde_docs_KDEDOCS = screenshot_1.png switchexpanded.png evaluate.png clear.png \
	symbols.png history.png screenshot_displaytooltip.png screenshot_expanded.png \
	latex_small.png loadstyle.png managestyles.png savestyle.png actions.png restoreall.png \
	restore.png delete.png settings.png
